RESOLVED FIXED313171
[Skia][GBM] Fix assertion in SkiaGPUAtlas::uploadImage(), trying to obtain a MemoryMappedGPUBuffer WriteScope
https://bugs.webkit.org/show_bug.cgi?id=313171
Summary [Skia][GBM] Fix assertion in SkiaGPUAtlas::uploadImage(), trying to obtain a ...
Nikolas Zimmermann
Reported 2026-04-23 14:33:07 PDT
.
Attachments
Nikolas Zimmermann
Comment 1 2026-04-23 14:34:37 PDT
EWS
Comment 2 2026-04-24 00:07:09 PDT
Committed 311927@main (c3e5fd593a04): <https://commits.webkit.org/311927@main> Reviewed commits have been landed. Closing PR #63465 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.