[Skia][GBM] Fix assertion in SkiaGPUAtlas::uploadImage(), trying to obtain a MemoryMappedGPUBuffer WriteScope https://bugs.webkit.org/show_bug.cgi?id=313171

Reviewed by Carlos Garcia Campos.

Extract the CPUMapping FD export out of MemoryMappedGPUBuffer::create()
into a new exportFDForMappingFromGBMBufferObject() helper, mirroring
the existing createDMABufFromGBMBufferObject(), and invoke it *before*
createDMABufFromGBMBufferObject().

The kernel caches the dma-buf object per gem-handle on the first
export and locks its mode flags for the lifetime of that cache entry.
Older Mesas (the issue reproduces on Raspberry Pi 5 with Mesa 25.02)
call gbm_bo_get_fd_for_plane() without DRM_RDWR, so if
createDMABufFromGBMBufferObject() ran first, the kernel would cache
the dma-buf as read-only. Every subsequent FD -- including the
DRMSystemCall RDWR fallback we use for mapping -- would then alias
that cached read-only object and bail on mmap(PROT_WRITE).

Running the RDWR export first ensures the kernel caches the dma-buf
with DRM_RDWR, and the later gbm_bo_get_fd_for_plane() call in
createDMABufFromGBMBufferObject() receives an FD backed by that same
RDWR-capable object.

Not testable on CI.

* Source/WebCore/platform/graphics/gbm/MemoryMappedGPUBuffer.cpp:
(WebCore::MemoryMappedGPUBuffer::create):
(WebCore::MemoryMappedGPUBuffer::exportFDForMappingFromGBMBufferObject):
* Source/WebCore/platform/graphics/gbm/MemoryMappedGPUBuffer.h:

Canonical link: https://commits.webkit.org/311927@main